Fixed product names not showing fully
Added hover effects and name will fully visible only when hovered and the same effect applied for barcodes

--- a/src/app/features/sales/components/pos-sales/pos-sales.component.scss
+++ b/src/app/features/sales/components/pos-sales/pos-sales.component.scss
@@ -9,7 +9,7 @@
 
 /* LEFT SIDE: CATALOG */
 .catalog-section {
-  flex: 7;
+  flex: 6;
   /* Takes 70% of width */
   background-color: #f4f6f8;
   padding: 20px;
@@ -127,6 +127,11 @@
       line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
+
+       &:hover {
+      overflow: visible;
+      display: inline-block;
+    }
     }
 
     /* 2. PRICE (The Highlight) */
@@ -147,6 +152,16 @@
       font-family: 'Consolas', monospace;
       /* Monospace looks like code */
       letter-spacing: 1px;
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      line-clamp: 1;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+
+       &:hover {
+      overflow: visible;
+      display: block;
+    }
     }
 
     /* 4. STOCK (The Inventory Check) */
@@ -173,14 +188,13 @@
 
 /* RIGHT SIDE: CART */
 .cart-section {
-  flex: 3;
+  flex: 4;
   /* Takes 30% of width */
   background-color: white;
   border-left: 1px solid #ddd;
   display: flex;
   flex-direction: column;
   padding: 20px;
-  max-width: 450px;
 
   h2 {
     margin-top: 0;
@@ -261,8 +275,8 @@
   font-weight: 500;
   color: #2c3e50;
   font-size: 14px;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  overflow: visible; 
+  text-overflow: ellipsis; ;
   white-space: nowrap;
 }
 
